--- a/charts/AreaChart.html
+++ b/charts/AreaChart.html
@@ -8,10 +8,10 @@ google.charts.load('current', {'packages':['corechart']});
 google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
 var data = google.visualization.arrayToDataTable([
-['Year', 'Sales', 'Expenses'],['2013',  1000,      400],['2014',  1170,      460],['2015',  660,       1120],['2016',  1030,      540]]);
+['qweqweqwe','qwerqwrtw'],['123',123.0],['123123',123.0],['123',41424.0],['13',125125.0]]);
 var options = {
-title: 'Company Performance',
-hAxis: {title: 'Year',  titleTextStyle: {color: '#333'}},
+title: 'qqweqwe',
+hAxis: {title: '',  titleTextStyle: {color: '#333'}},
 vAxis: {minValue: 0}
 };
 var chart = new google.visualization.AreaChart(document.getElementById('chart_div'));
