--- a/charts/LineChart.html
+++ b/charts/LineChart.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AreaChart</title>
+<title>LineChart</title>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
 google.charts.load('current', {'packages':['corechart']});
 google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
 var data = google.visualization.arrayToDataTable([
-['qwt','qwt','qwt'],['124',1256.0,136.0],['125',214.0,1.0]]);
+['qwyad','asha','weyedh'],['1256',1263.0,234.0],['724',1264327.0,236236.0],['13',153.0,123.0]]);
 var options = {
-title: 'qwt',
-hAxis: {title: '',  titleTextStyle: {color: '#333'}},
-vAxis: {minValue: 0}
-};
-var chart = new google.visualization.AreaChart(document.getElementById('chart_div'));
+title: 'asgash',
+curveType: 'function',legend: { position: 'bottom' }};
+var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 chart.draw(data, options);
 }
 </script>
@@ -22,7 +20,7 @@ chart.draw(data, options);
 
 <body>
 <div 
-id="chart_div" style="width: 100%; height: 500px;">
+id="chart_div" style="width: 900px; height: 500px">
 </div>
 </body>
 
