--- a/charts/PieChart.html
+++ b/charts/PieChart.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AreaChart</title>
+<title>PieChart</title>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
 google.charts.load('current', {'packages':['corechart']});
 google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
 var data = google.visualization.arrayToDataTable([
-['qwt','qwt','qwt'],['124',1256.0,136.0],['125',214.0,1.0]]);
+['qwtq','qwtw'],['124124',12414.0],['124',12125.0]]);
 var options = {
-title: 'qwt',
-hAxis: {title: '',  titleTextStyle: {color: '#333'}},
-vAxis: {minValue: 0}
-};
-var chart = new google.visualization.AreaChart(document.getElementById('chart_div'));
+title: 'qweqwrt',
+is3D: true,};
+var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
 chart.draw(data, options);
 }
 </script>
@@ -22,7 +20,7 @@ chart.draw(data, options);
 
 <body>
 <div 
-id="chart_div" style="width: 100%; height: 500px;">
+id="chart_div" style="width: 900px; height: 500px;">
 </div>
 </body>
 
